--- a/src/Components/TeamInfoComponent/TeamInfo.css
+++ b/src/Components/TeamInfoComponent/TeamInfo.css
@@ -1,3 +1,13 @@
 .TeamInfo{
     padding-bottom: 10px;
 }
+.large.text{
+    font-size: 100px;
+}
+.Title{
+    color: red;
+    font-size: 4vw;
+}
+.TeamRecord{
+    padding-bottom: 10px;
+}
