--- a/src/Components/TeamInfoComponent/TeamInfo.css
+++ b/src/Components/TeamInfoComponent/TeamInfo.css
@@ -1,13 +1,7 @@
 .TeamInfo{
     padding-bottom: 10px;
 }
-.large.text{
-    font-size: 100px;
-}
 .Title{
-    color: red;
+    color: #db2828;
     font-size: 4vw;
-}
-.TeamRecord{
-    padding-bottom: 10px;
 }
