--- a/src/Components/RightMenuComponent/RightMenu.css
+++ b/src/Components/RightMenuComponent/RightMenu.css
@@ -1,10 +1,10 @@
 .RightMenu{
-    width: 78%;
-    background-color:red;
+    width: 98%;
+    background-color:#db2828;
     padding: 10px;
     position: absolute;
     margin-right: 10px;
     right: 0;
-    height: 100vh;
+    /*height: fit-content;*/
     
     }
