--- a/src/Components/StatMenuComponent/StatMenu.css
+++ b/src/Components/StatMenuComponent/StatMenu.css
@@ -6,7 +6,8 @@
     font-size: 2.75vw;
 }
 .Welcome{
-    font-size: 60px;
-    color: red;
+    font-size: 4vw;
+    color: #db2828;
     line-height: 1;
+    
 }
